# jigdo

./: .cvsignore  .gitattributes  .gitignore  Makefile.in  README  changelog  configure  configure.ac  configure.in  jigdo.glade  jigdo.spec
deb/: control  copyright  rules
debian/: changelog  control  copyright  jigdo-file.doc-base  jigdo-file.docs  jigdo.docs  rules
debian/patches/: 03.jigdo-lite-https.patch  07.more_https_support.patch  series
doc/: .cvsignore  BuildOnWindows.txt  Hacking.txt  Makefile.in  README-bindist.txt  README-windist.txt  TechDetails.txt  debian-jigdo-mini-howto.html  debian-jigdo-mini-howto.sgml  jigdo-file.1  jigdo-file.html  jigdo-file.sgml  jigdo-lite.1  jigdo-lite.html  jigdo-lite.sgml  jigdo-mirror.1  jigdo-mirror.html  jigdo-mirror.sgml  jigdo.1  jigdo.html  jigdo.sgml  libwww-mingw.diff
gfx/: abutton.xcf.bz2  button-cross.xpm  button-pause.xpm  button-play.xpm  buttons.xcf.bz2  icon-cd.xcf.bz2  jigdo-logo.xpm  job-deb.xpm  job-file.xpm  job-iso.xpm  job-jigdo.xpm  preferences.xpm  progress051.xpm  quit.xpm
po/: .cvsignore  Makefile.in  de.gmo  de.po  jigdo.pot
scripts/: check-mirrors  convert-cvsmirrors.awk  convert-mirrors.awk  debian-mirrors.jigdo  depend.awk  glade-filter.awk  html-beautify.awk  jigdo-lite  jigdo-lite.bat  jigdo-mirror  make-templates  win-lib-install.sh
src/: .cvsignore  .gitignore  Makedeps  Makefile.in  Makefile.mingw  autoptr.hh  bstream.hh  cachefile.cc  cachefile.hh  compat.cc  compat.hh  config.h.in  config.h.mingw  configfile-test.cc  configfile.cc  configfile.hh  debug.cc  debug.hh  dirent.hh  download.cc  download.hh  glibc-getopt.c  glibc-getopt.h  glibc-md5.cc  glibc-md5.hh  glibwww-callbacks.cc  glibwww-init.cc  glibwww-trans.cc  glibwww.hh  gtk-error.cc  gtk-error.hh  gtk-gui.cc  gtk-gui.hh  gtk-interface.cc.tmp  gtk-support.cc  gtk-support.hh  jigdo-file-cmd.cc  jigdo-file-cmd.hh  jigdo-file.cc  jigdo.cc  (+45 more)
src/glibcurl/: glibcurl-example.c  glibcurl.c  glibcurl.h
src/gtk/: gtk-makeimage.cc  gtk-makeimage.hh  gtk-single-url.cc  gtk-single-url.hh  gui.cc  gui.hh  interface.cc  interface.hh  jigdo.cc  jobline.cc  jobline.fh  jobline.hh  joblist.cc  joblist.hh  messagebox.cc  messagebox.hh  support.hh  treeiter.cc  treeiter.hh
src/job/: cached-url.cc  cached-url.hh  datasource.cc  datasource.hh  jigdo-io-test.cc  jigdo-io.cc  jigdo-io.fh  jigdo-io.hh  jigdodownload.cc  jigdodownload.hh  job.hh  makeimage.cc  makeimage.hh  makeimagedl-info-test.cc  makeimagedl-info.cc  makeimagedl.cc  makeimagedl.fh  makeimagedl.hh  single-url.cc  single-url.hh  url-mapping-test.cc  url-mapping.cc  url-mapping.fh  url-mapping.hh
src/net/: download.cc  download.hh  glibwww-callbacks.cc  glibwww-init.cc  glibwww-trans.cc  glibwww.hh  libwww-HTFTP.c  libwww-HTHost.c  libwww.hh  proxyguess-test.cc  proxyguess.cc  proxyguess.hh  uri-test.cc  uri.cc  uri.hh
src/util/: autonullptr-test.cc  autonullptr.hh  autoptr.hh  bstream-counted.hh  bstream.cc  bstream.hh  configfile-test.cc  configfile.cc  configfile.hh  debug.cc  debug.hh  glibc-md5.cc  glibc-sha256.cc  glibc-sha256.hh  gunzip-test.cc  gunzip.cc  gunzip.hh  ilist.hh  log-test.cc  log.cc  log.hh  md5sum-test.cc  md5sum.cc  md5sum.fh  md5sum.hh  md5sum.ih  mimestream-test.cc  mimestream.hh  nocopy.hh  progress.cc  progress.fh  progress.hh  random.cc  rsyncsum-test.cc  rsyncsum.cc  rsyncsum.hh  rsyncsum.ih  sha256sum-test.cc  sha256sum.cc  sha256sum.fh  (+10 more)
